# razer

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.cjs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
migrations/2023-12-27-114126_create_my_model/: down.sql  up.sql
razer_axum/: Cargo.toml
razer_axum/src/: lib.rs
razer_components/: Cargo.toml
razer_components/src/: lib.rs
razer_core/: Cargo.toml
razer_core/razer_core_derive/: Cargo.toml
razer_core/razer_core_derive/src/: lib.rs
razer_core/src/: error.rs  lib.rs  templates.rs
razer_core/templates/: base.html  dashboard.html  list.html
razer_derive/: Cargo.toml
razer_derive/src/: lib.rs
razer_ui/: Cargo.toml
razer_ui/src/: lib.rs
razer_ui/templates/: admin_create.html  admin_home.html  admin_list.html  admin_view.html  base.html  not_found.html
razer_ui/templates/widgets/: checkbox.html  number_input.html  text_area.html  toggle.html
src/: lib.rs  main.rs  schema.rs
src/forms/: mod.rs  old.rs
styles/: tailwind.css
templates/: admin-create.html  admin-list.html  admin-view.html  admin.html  base.html  hello.html
