[package]
name = "razer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
async-trait = "0.1.73"

# diesel = { path = "../../docs/diesel/diesel/diesel", features = ["sqlite"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

razer_derive = { path = "./razer_derive", version = "0.1.0" }
uuid = { version = "1.6.1", features = ["v4"] }
