[workspace]
resolver = "2"
members = [
    "razer_core",
    "razer_derive",
    "examples/basic"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
