[package]
name = "razer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
razer_ui = { path = "../razer_ui" }
razer_core_derive = { path = "./razer_core_derive" }
bytes = { version = "1", features = ["serde"] }
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.1"
serde_path_to_error = "0.1.17"
