[package]
name = "example_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
razer_core = { path = "../../razer_core" }
razer_core_derive = { path = "../../razer_core/razer_core_derive" }
razer_ui = { path = "../../razer_ui" }
razer_axum = { path = "../../razer_axum" }

axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
