[package]
name = "razer-example-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
razer_core = { path = "../../razer_core" }
razer_derive = { path = "../../razer_derive" }
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
once_cell = "1.19" 